updated deprecated method